# MI-API

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  analysis.py  gkov.cpp  gkov.h  hist.cpp  hist.h  install.sh  library.cpp  library.h  simulator.py  test.cpp  utils.cpp  utils.h
cluster/: attack_cluster.cpp  config.yaml  script.py
cmake/: FindMLPACK.cmake
data/results/: 10240_traces.json  10_traces.json  1280_traces.json  160_traces.json  163840_traces.json  20480_traces.json  20_traces.json  2560_traces.json  320_traces.json  40960_traces.json  40_traces.json  5120_traces.json  640_traces.json  80_traces.json  81920_traces.json
data/traces/: 10240_traces.h5  10_traces.h5  1280_traces.h5  160_traces.h5  163840_traces.h5  20480_traces.h5  20_traces.h5  2560_traces.h5  320_traces.h5  40960_traces.h5  40_traces.h5  5120_traces.h5  640_traces.h5  80_traces.h5  81920_traces.h5
include/: gkov.h  hist.h  simulator.h  tree_helper.h  utils.h
report/: build.ps1  build.sh  references.bib  report.tex
src/: gkov.cpp  hist.cpp  simulator.cpp  utils.cpp
test/: attack.cpp  simulate.cpp
