cmake_minimum_required(VERSION 3.8)
include(FindPackageHandleStandardArgs)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
project(small_project)

set(CMAKE_CXX_STANDARD 23)

add_library(gkov gkov.cpp gkov.h)
add_library(hist hist.cpp hist.h)
add_library(utils utils.cpp utils.h)

find_package(MLPACK REQUIRED)
include_directories(${MLPACK_INCLUDE_DIRS})
find_package(Armadillo REQUIRED)
target_link_libraries(gkov ${MLPACK_LIBRARIES})
target_link_libraries(gkov ${ARMADILLO_LIBRARIES})
find_package(GSL REQUIRED)
target_link_libraries(hist GSL::gsl GSL::gslcblas)
find_package(HDF5 REQUIRED COMPONENTS C CXX HL)
include_directories (${HDF5_INCLUDE_DIR})
target_link_libraries(utils ${HDF5_LIBRARIES})